<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:background="?attr/colorOnPrimary"
        android:elevation="4dp"
        android:paddingHorizontal="@dimen/padding_outline_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/burger_otd_name_tv"
            style="@style/headline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/dummy_burger_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="250dp" />

        <TextView
            android:id="@+id/burger_otd_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/dummy_price"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/burger_otd_name_tv"
            app:layout_constraintEnd_toEndOf="parent" />
        <!--TODO Font auslagern-->

        <TextView
            android:id="@+id/number_of_ingredients_tv"
            style="@style/headline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dummy_ingredients_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/burger_otd_name_tv" />

        <TextView
            android:id="@+id/ingredients_list_tv"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_below="@+id/number_of_ingredients_tv"
            android:text="@string/dummy_ingredients_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_ingredients_tv" />
        <!--layout_height for 3 rows to prevent jumpy jump-->

        <LinearLayout
            android:id="@+id/food_value_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/ingredients_list_tv">

            <include
                layout="@layout/food_value_column"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:myHeader="@{@string/energy}"
                app:myValue="@{`500 kJ`}" />

            <include
                layout="@layout/food_value_column"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:myHeader="@{@string/fat}"
                app:myValue="@{`20 g`}" />

            <include
                layout="@layout/food_value_column"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:myHeader="@{@string/carbohydrates}"
                app:myValue="@{`50 g`}" />

            <include
                layout="@layout/food_value_column"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:myHeader="@{@string/protein}"
                app:myValue="@{`6 g`}" />
        </LinearLayout>

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/food_value_wrapper"
            android:layout_marginTop="30dp"
            android:text="@string/order"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_value_wrapper" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
